--- a/sass/layout/_homepage.scss
+++ b/sass/layout/_homepage.scss
@@ -1,10 +1,11 @@
 body {
+    font-family: 'Roboto', sans-serif;
     counter-reset: order;
     scroll-behavior: smooth;
 }
 
 .container {
-    max-width: 68rem;
+    max-width: 1280px;
     margin: auto; 
 }
 
