--- a/sass/style.css
+++ b/sass/style.css
@@ -89,10 +89,6 @@ a {
   cursor: pointer;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-}
-
 .btn--gradient {
   border: 0;
   padding: 1.3rem 1.5rem;
@@ -106,6 +102,7 @@ body {
   background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
 }
 .btn--gradient:hover {
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
   transform: scale(1.02);
   opacity: 0.9;
 }
@@ -120,12 +117,13 @@ body {
 }
 
 body {
+  font-family: "Roboto", sans-serif;
   counter-reset: order;
   scroll-behavior: smooth;
 }
 
 .container {
-  max-width: 68rem;
+  max-width: 1280px;
   margin: auto;
 }
 
@@ -356,46 +354,90 @@ body {
      object-position: 50% 50%;
 }
 
-.container__menu {
+.container-menu {
   border-radius: 2rem 2rem 0 0;
   margin-top: -2rem;
   position: relative;
   background-color: #F7f7f7;
 }
-
-.menu__btn {
-  height: 20vh;
+.container-menu .validate {
   display: flex;
   place-content: center;
   align-items: center;
+}
+
+.title, .menu {
+  padding: 2.5rem 1rem;
 }
 
 .title {
   display: flex;
   position: relative;
   align-content: center;
-  padding: 2.5rem 1rem;
 }
 .title h2 {
   font-size: 1.5rem;
   font-family: "Shrikhand", cursive;
   margin: 0;
 }
-.title i {
+.title i:before {
+  cursor: pointer;
+  content: "\f004";
+  display: inline-block;
+  font-style: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 6 Free";
+  font-weight: 400;
+  font-size: 2rem;
   position: absolute;
-  right: 3rem;
   top: 50%;
+  right: 2rem;
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transform: translateY(-50%);
+}
+.title i:after {
+  cursor: pointer;
+  content: "\f004";
+  display: inline-block;
+  font-style: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 6 Free";
+  font-weight: 400;
+  font-size: 2rem;
+  position: absolute;
+  top: 50%;
+  right: 2rem;
+  color: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transform: translateY(-50%);
+  background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
+  font-weight: 900;
+  line-height: 1;
+  transition: all 300ms ease-in-out;
+}
+.title i:hover::after {
+  opacity: 1;
 }
 
 .menu {
-  padding: 2.5rem 1rem;
+  max-width: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   row-gap: 1rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .menu {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     -moz-column-gap: 1rem;
          column-gap: 1rem;
   }
@@ -413,19 +455,20 @@ body {
   margin-top: 0.3rem;
   width: 2.5rem;
 }
-
-.menu__item {
+.menu__list {
   max-width: 100%;
-  cursor: pointer;
+  min-width: 0;
+}
+.menu__item {
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.13);
   background-color: #FFF;
   border-radius: 1rem;
   margin-bottom: 1rem;
   display: flex;
   overflow: hidden;
-  justify-content: space-between;
+  cursor: pointer;
   -webkit-animation: menuAppear 1s;
           animation: menuAppear 1s;
-  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.13);
 }
 .menu__item:nth-child(1) {
   -webkit-animation-delay: 100ms;
@@ -439,52 +482,52 @@ body {
   -webkit-animation-delay: 300ms;
           animation-delay: 300ms;
 }
-.menu__item--col {
-  flex-direction: column;
-  padding: 0.8rem 1rem;
+.menu__item:nth-child(4) {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
 }
-.menu__item--col h4 {
-  font-size: 1.1rem;
-  margin-bottom: 0.2rem;
+.menu__item:nth-child(5) {
+  -webkit-animation-delay: 500ms;
+          animation-delay: 500ms;
+}
+.menu__item .content, .menu__item .price {
+  padding: 1rem;
+}
+.menu__item .content {
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
 }
-.menu__item--col .meal-desc {
-  font-size: 1rem;
+.menu__item .content h4 {
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
 }
-.menu__item--flex {
+.menu__item .content p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.menu__item .price {
+  margin-left: auto;
+  font-weight: 900;
   display: flex;
-  justify-content: space-between;
-  min-width: 0;
+  align-items: flex-end;
 }
-.menu__item--flex .price {
-  font-weight: bold;
-  margin-right: 1rem;
-  margin-top: 2.3rem;
-}
-.menu__item .meal-selec {
+.menu__item .selec {
+  width: 4rem;
   background-color: #99E2D0;
   color: #FFF;
-  border-radius: 0 1rem 1rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 1rem;
-  margin-right: -5rem;
-  width: 4rem;
-  height: 4.3rem;
-  padding: 0;
-  transition: all 0.5s;
+  margin-right: -4rem;
+  transition: margin-right 0.5s;
 }
-.menu__item:hover .meal-selec {
-  margin-left: 0;
+.menu__item:hover .selec {
   margin-right: 0;
 }
-.menu__item:hover .meal-selec i {
+.menu__item:hover .selec i {
   -webkit-animation: spinCheck 0.5s;
           animation: spinCheck 0.5s;
 }
